--- a/about.css
+++ b/about.css
@@ -1,6 +1,6 @@
 /* --- A. About Page Hero --- */
 .about-hero {
-    background: url('https://picsum.photos/id/68/1920/1080') no-repeat center center/cover;
+    background: url('https://images.unsplash.com/photo-1520250497591-112f2f40a3f4?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGhvdGVsfGVufDB8fDB8fHww&auto=format&fit=crop&q=60&w=500') no-repeat center center/cover;
     height: 45vh;
 }
 
