--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,6 @@
 /* --- A. Contact Page Hero --- */
 .contact-hero {
-    background: url('https://picsum.photos/id/1052/1920/1080') no-repeat center center/cover;
+    background: url('https://images.unsplash.com/photo-1587560699334-bea93391dcef?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGNvbnRhY3QlMjB1c3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&q=60&w=500') no-repeat center center/cover;
     background-position: center 30%;
     height: 50vh;
 }
